--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     },
     "dependencies": {
         "font-awesome": "^4.7.0",
+        "formik": "^2.4.6",
         "jquery": "^3.2.1",
-        "nprogress": "^0.2.0"
+        "nprogress": "^0.2.0",
+        "react-table": "^7.8.0",
+        "react-toastify": "^10.0.5",
+        "yup": "^1.4.0"
     }
 }
